--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>하잉</title>
+  <title>World Class</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-  <div>
-    <h1>
-      일단 틀만 만들었습니다. ㅇㅅㅇ
-    </h1>
-    
-  </div>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#story">STORY</a></li>
+        <li><a href="#cocktail">COCKTAIL</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>ABOUT</h2>
+      <p>'계속 걸어가며 길을 찾아 떠나자'</p>
+      <p>사람은 평생 평균 1억 5천만 걸음을 걷지만, 다른 곳으로 향하는 사람은 얼마나 될까요?<br>
+      우리는 익숙한 길에서 벗어나 모두가 걸을 수 있는 새로운 길을 찾아 만듭니다.<br>
+      함께 나누는 순간들을 더욱 다양하고, 풍요롭게 그리고 발전을 위해.</p>
+    </section>
+
+    <section id="story">
+      <h2>우리들의 이야기</h2>
+      <p>전 세계를 돌아다니며 식재료와 식문화에 영감을 받아 우리만의 길을 찾으며<br>
+      화려한 테크닉보다는 그 나라의 문화를 이해하고 지속가능성까지 생각하며<br>
+      우리들만의 이야기를 다양한 칵테일로 표현합니다.</p>
+    </section>
+
+    <section id="cocktail">
+      <h2>COCKTAIL</h2>
+      <ul>
+        <li>하와이안피자</li>
+        <li>루꼴라샐러드</li>
+        <li>크리스마스푸딩</li>
+        <li>미나리무침</li>
+        <li>비빔밥</li>
+        <li>폰즈소바</li>
+        <li>베이컨밀크쉐이크</li>
+        <li>티라미슈</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>CONTACT</h2>
+      <p>소셜에서 우리와 함께 같이 걸어보세요</p>
+      <div class="social-icons">
+        <!-- 소셜 미디어 아이콘들이 들어갈 자리 -->
+      </div>
+    </section>
+  </main>
+  <script src="script.js"></script>
 </body>
 </html>
