--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
   <header>
-    <nav>
+    <div class="menu-btn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <a href="/" class="logo">
+      <img src="./asset/logo.png" alt="World Class 로고">
+    </a>
+    <nav class="nav-menu">
       <ul>
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#story">STORY</a></li>
