--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
   </header>
 
   <main>
+    <section id="main">
+      <div class="slider">
+        <div class="slide-container">
+          <img src="./asset/img1/1-1.png" alt="슬라이드 이미지 1" class="slide">
+          <img src="./asset/img1/1-2.jpg" alt="슬라이드 이미지 2" class="slide">
+          <img src="./asset/img1/1-3.jpg" alt="슬라이드 이미지 3" class="slide">
+        </div>
+        <div class="dots">
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
+      </div>
+    </section>
     <section id="about">
       <h2>ABOUT</h2>
       <p>'계속 걸어가며 길을 찾아 떠나자'</p>
