스타일링 수정

--- a/index.html
+++ b/index.html
@@ -49,7 +49,24 @@
       우리는 익숙한 길에서 벗어나 모두가 걸을 수 있는 새로운 길을 찾아 만듭니다.<br>
       함께 나누는 순간들을 더욱 다양하고, 풍요롭게 그리고 발전을 위해.</p>
     </section>
-
+    <section id="about-img">
+      <div class="slider">
+        <div class="slide-container">
+          <img src="./asset/img2/2-1.jpg" alt="어바웃 슬라이드 이미지 1" class="slide">
+          <img src="./asset/img2/2-2.jpeg" alt="어바웃 슬라이드 이미지 2" class="slide">
+          <img src="./asset/img2/2-3.jpeg" alt="어바웃 슬라이드 이미지 3" class="slide">
+          <img src="./asset/img2/2-4.jpeg" alt="어바웃 슬라이드 이미지 4" class="slide">
+          <img src="./asset/img2/2-5.jpeg" alt="어바웃 슬라이드 이미지 5" class="slide">
+        </div>
+        <div class="dots">
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
+      </div>
+    </section>
     <section id="story">
       <h2>우리들의 이야기</h2>
       <p>전 세계를 돌아다니며 식재료와 식문화에 영감을 받아 우리만의 길을 찾으며<br>
