--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>World Class</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
   <header>
@@ -76,23 +76,72 @@
 
     <section id="cocktail">
       <h2>COCKTAIL</h2>
-      <ul>
-        <li>하와이안피자</li>
-        <li>루꼴라샐러드</li>
-        <li>크리스마스푸딩</li>
-        <li>미나리무침</li>
-        <li>비빔밥</li>
-        <li>폰즈소바</li>
-        <li>베이컨밀크쉐이크</li>
-        <li>티라미슈</li>
-      </ul>
+      <div class="cocktail-slider">
+        <button class="cocktail-arrow prev-arrow">&lt;</button>
+        <button class="cocktail-arrow next-arrow">&gt;</button>
+        <div class="cocktail-slide-container">
+          <div class="cocktail-slide">
+            <img src="./asset/ade/하와이안피자.png" alt="하와이안피자 칵테일">
+            <p>하와이안피자</p>
+          </div>
+          <div class="cocktail-slide">
+            <img src="./asset/ade/루꼴라샐러드.png" alt="루꼴라샐러드 칵테일">
+            <p>루꼴라샐러드</p>
+          </div>
+          <div class="cocktail-slide">
+            <img src="./asset/ade/크리스마스푸딩.png" alt="크리스마스푸딩 칵테일">
+            <p>크리스마스푸딩</p>
+          </div>
+          <div class="cocktail-slide">
+            <img src="./asset/ade/미나리무침.png" alt="미나리무침 칵테일">
+            <p>미나리무침</p>
+          </div>
+          <div class="cocktail-slide">
+            <img src="./asset/ade/비빔밥.png" alt="비빔밥 칵테일">
+            <p>비빔밥</p>
+          </div>
+          <div class="cocktail-slide">
+            <img src="./asset/ade/폰즈소바.png" alt="폰즈소바 칵테일">
+            <p>폰즈소바</p>
+          </div>
+          <div class="cocktail-slide">
+            <img src="./asset/ade/베이컨밀크쉐이크.png" alt="베이컨밀크쉐이크 칵테일">
+            <p>베이컨밀크쉐이크</p>
+          </div>
+          <div class="cocktail-slide">
+            <img src="./asset/ade/티라미슈.png" alt="티라미슈 칵테일">
+            <p>티라미슈</p>
+          </div>
+        </div>
+        <div class="cocktail-dots">
+          <span class="cocktail-dot"></span>
+          <span class="cocktail-dot"></span>
+          <span class="cocktail-dot"></span>
+          <span class="cocktail-dot"></span>
+          <span class="cocktail-dot"></span>
+          <span class="cocktail-dot"></span>
+          <span class="cocktail-dot"></span>
+          <span class="cocktail-dot"></span>
+        </div>
+      </div>
     </section>
 
     <section id="contact">
       <h2>CONTACT</h2>
       <p>소셜에서 우리와 함께 같이 걸어보세요</p>
       <div class="social-icons">
-        <!-- 소셜 미디어 아이콘들이 들어갈 자리 -->
+        <a href="https://www.youtube.com/" target="_blank" class="social-icon">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://www.instagram.com/" target="_blank" class="social-icon">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.facebook.com/" target="_blank" class="social-icon">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="mailto:contact@worldclass.com" class="social-icon">
+          <i class="far fa-envelope"></i>
+        </a>
       </div>
     </section>
   </main>
