--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       -ms-user-select: none;
       user-select: none;
     }
+    .slide-container {
+      touch-action: pan-y pinch-zoom; /* 터치 동작 활성화 */
+    }
   </style>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
