퀄리티 업업

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>World Class</title>
+  <!-- 파비콘 설정 -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./asset/img1/1-1.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./asset/img1/1-1.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./asset/img1/1-1.png">
+  <!-- 카카오톡 공유 메타 태그 추가 -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="World Class">
+  <meta property="og:description" content="World Class">
+  <meta property="og:image" content="https://worldclass.com/asset/img1/1-1.png">
   <style>
     * {
       -webkit-user-select: none;
