이미지 업데이트

--- a/index.html
+++ b/index.html
@@ -143,41 +143,31 @@
         <button class="cocktail-arrow next-arrow">&gt;</button>
         <div class="cocktail-slide-container">
           <div class="cocktail-slide">
-            <img src="./asset/ade/하와이안피자.png" alt="하와이안피자 칵테일">
+            <img src="./asset/ade/a.jpeg" alt="하와이안피자 칵테일">
             <p>하와이안피자</p>
           </div>
           <div class="cocktail-slide">
-            <img src="./asset/ade/루꼴라샐러드.png" alt="루꼴라샐러드 칵테일">
+            <img src="./asset/ade/b.jpeg" alt="루꼴라샐러드 칵테일">
             <p>루꼴라샐러드</p>
           </div>
           <div class="cocktail-slide">
-            <img src="./asset/ade/크리스마스푸딩.png" alt="크리스마스푸딩 칵테일">
+            <img src="./asset/ade/c.jpeg" alt="크리스마스푸딩 칵테일">
             <p>크리스마스푸딩</p>
           </div>
           <div class="cocktail-slide">
-            <img src="./asset/ade/미나리무침.png" alt="미나리무침 칵테일">
+            <img src="./asset/ade/d.png" alt="미나리무침 칵테일">
             <p>미나리무침</p>
           </div>
           <div class="cocktail-slide">
-            <img src="./asset/ade/비빔밥.png" alt="비빔밥 칵테일">
+            <img src="./asset/ade/e.jpeg" alt="비빔밥 칵테일">
             <p>비빔밥</p>
           </div>
           <div class="cocktail-slide">
-            <img src="./asset/ade/폰즈소바.png" alt="폰즈소바 칵테일">
+            <img src="./asset/ade/f.jpeg" alt="폰즈소바 칵테일">
             <p>폰즈소바</p>
-          </div>
-          <div class="cocktail-slide">
-            <img src="./asset/ade/베이컨밀크쉐이크.png" alt="베이컨밀크쉐이크 칵테일">
-            <p>베이컨밀크쉐이크</p>
-          </div>
-          <div class="cocktail-slide">
-            <img src="./asset/ade/티라미슈.png" alt="티라미슈 칵테일">
-            <p>티라미슈</p>
           </div>
         </div>
         <div class="cocktail-dots">
-          <span class="cocktail-dot"></span>
-          <span class="cocktail-dot"></span>
           <span class="cocktail-dot"></span>
           <span class="cocktail-dot"></span>
           <span class="cocktail-dot"></span>
