--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     }
   </style>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
   <header>
@@ -74,12 +74,12 @@
     </a>
     <nav class="nav-menu">
       <ul>
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#story">STORY</a></li>
-        <li><a href="#cocktail">COCKTAIL</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#about">소개</a></li>
+        <li><a href="#story">우리들의 이야기</a></li>
+        <li><a href="#cocktail">칵테일</a></li>
+        <li><a href="#contact">문의</a></li>
         <li class="language-selector">
-          <span>LANGUAGE</span>
+          <button class="lang-btn">LANGUAGE <i class="fas fa-globe"></i></button>
           <div class="language-dropdown">
             <a href="#" data-lang="ko">한국어</a>
             <a href="#" data-lang="en">English</a>
@@ -105,7 +105,7 @@
       </div>
     </section>
     <section id="about">
-      <h2>ABOUT</h2>
+      <h2>소개</h2>
       <p>'계속 걸어가며 길을 찾아 떠나자'</p>
       <p>사람은 평생 평균 1억 5천만 걸음을 걷지만, 다른 곳으로 향하는 사람은 얼마나 될까요?<br>
       우리는 익숙한 길에서 벗어나 모두가 걸을 수 있는 새로운 길을 찾아 만듭니다.<br>
@@ -137,10 +137,10 @@
     </section>
 
     <section id="cocktail">
-      <h2>COCKTAIL</h2>
+      <h2>칵테일</h2>
       <div class="cocktail-slider">
-        <button class="cocktail-arrow prev-arrow">&lt;</button>
-        <button class="cocktail-arrow next-arrow">&gt;</button>
+        <button class="cocktail-arrow prev-arrow"><i class="fas fa-chevron-circle-left"></i></button>
+        <button class="cocktail-arrow next-arrow"><i class="fas fa-chevron-circle-right"></i></button>
         <div class="cocktail-slide-container">
           <div class="cocktail-slide">
             <img src="./asset/ade/a.jpeg" alt="하와이안피자 칵테일">
@@ -179,7 +179,7 @@
     </section>
 
     <section id="contact">
-      <h2>CONTACT</h2>
+      <h2>문의</h2>
       <p>소셜에서 우리와 함께 같이 걸어보세요</p>
       <div class="social-icons">
         <a href="https://www.youtube.com/" target="_blank" class="social-icon">
