--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <span></span>
       <span></span>
     </div>
-    <a href="/" class="logo">
+    <a href="http://findthewayaengyo.com/" class="logo">
       <img src="./asset/logo.png" alt="World Class 로고">
     </a>
     <nav class="nav-menu">
@@ -182,16 +182,16 @@
       <h2>문의</h2>
       <p>소셜에서 우리와 함께 같이 걸어보세요</p>
       <div class="social-icons">
-        <a href="https://www.youtube.com/" target="_blank" class="social-icon">
+        <a href="https://www.youtube.com/channel/UCjAbPVZ6x5PTqTDrvaDvICg" target="_blank" class="social-icon">
           <i class="fab fa-youtube"></i>
         </a>
-        <a href="https://www.instagram.com/" target="_blank" class="social-icon">
+        <a href="https://www.instagram.com/aengyo_?igsh=eWZ1ZzUyb3BnNzIw" target="_blank" class="social-icon">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://www.facebook.com/" target="_blank" class="social-icon">
+        <a href="https://www.facebook.com/share/1HnwyFazYQ/?mibextid=wwXIfr" target="_blank" class="social-icon">
           <i class="fab fa-facebook"></i>
         </a>
-        <a href="mailto:contact@worldclass.com" class="social-icon">
+        <a href="mailto:aengyo21@gmail.com" class="social-icon">
           <i class="far fa-envelope"></i>
         </a>
       </div>
