--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <!-- 카카오톡 공유 메타 태그 추가 -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="World Class">
-  <meta property="og:description" content="World Class">
-  <meta property="og:image" content="https://worldclass.com/asset/img1/1-1.png">
+  <meta property="og:description" content="'계속 걸어가며 길을 찾아 떠나자'">
+  <meta property="og:image" content="./asset/img1/1-1.png">
   <style>
     * {
       -webkit-user-select: none;
